crates/cribo/tests/snapshots/ruff_lint_results@ast_rewriting_global.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/ast_rewriting_global/main.py
---
RuffLintResults {
    f401_violations: [],
    f404_violations: [],
    other_violations: [
        "Line 5: unused-import - `types` imported but unused",
    ],
    total_violations: 1,
}
