crates/cribo/tests/snapshots/ruff_lint_results@ast_rewriting_regular_import_aliases.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/ast_rewriting_regular_import_aliases/main.py
---
RuffLintResults {
    f401_violations: [],
    f404_violations: [],
    other_violations: [
        "Line 96: unused-import - `utils.config` imported but unused",
    ],
    total_violations: 1,
}
