crates/cribo/tests/snapshots/ruff_lint_results@ast_rewriting_symbols_collision.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/ast_rewriting_symbols_collision/main.py
---
RuffLintResults {
    f401_violations: [],
    f404_violations: [],
    other_violations: [
        "Line 6: unused-import - `types` imported but unused",
    ],
    total_violations: 1,
}
