crates/cribo/tests/snapshots/ruff_lint_results@builtin_types_circular.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/builtin_types_circular/main.py
---
RuffLintResults {
    f401: [],
    f404: [],
    other: [],
    total: 0,
}
